# superpunchouteditor

./: .gitignore  .pre-commit-config.yaml  AUDIO_EDITOR_IMPLEMENTATION.md  Cargo.toml  DUPLICATE_SHARED_BANK_FEATURE.md  EU_JPN_ADDRESS_FINDINGS.md  LICENSE  MULTI_ROM_SUPPORT.md  Makefile.toml  PROJECT_COMPLETION_PLAN.md  README.md  ROSTER_EDITOR_IMPLEMENTATION.md  SHARED_BANK_WARNING_ENGINE.md  TECHNICAL_DEBT_REMEDIATION_PLAN.md  V4_ARCHITECTURE.md  V4_QUICKSTART.md  V5_COMPARISON.md  V5_PROPOSAL.md  eu_jpn_table_addresses.json  pyproject.toml  requirements.txt  research_snes9x_integration.md  rom_pattern_search_results.json  search_rom_patterns.py  spo_boxer_manifest.md  spo_boxer_summary.csv  super_punch_out_editor_build_plan.md  super_punch_out_editor_wireframes.md  text_encoding_analysis.md
apps/desktop/src-tauri/: Cargo.toml  build_check.txt  build_errors_tauri.txt  tauri.conf.json  warnings.txt
apps/desktop/src-tauri/docs/: animation-editor.md  frame-reconstructor.md  getting-started.md  keyboard-shortcuts.md  palette-editing.md  patch-export.md  rom-validation.md  script-editing.md  sprite-editing.md  troubleshooting.md
apps/desktop/src-tauri/plugins/: README.md  advanced_palette_manager.lua  auto_patch_validator.lua  example_batch_export.lua  example_hello.lua  example_rom_stats.lua  interactive_tutorial.lua  rom_analyzer.lua  stat_calculator.lua  v4_feature_demo.lua
apps/desktop/src-tauri/src/: app_state.rs  audio_commands.rs  emulator.rs  emulator_embedded.rs  help_system.rs  lib.rs  main.rs  roster_commands.rs  settings_commands.rs  text_commands.rs  tools_commands.rs  types.rs  undo.rs  update_commands.rs
apps/desktop/src-tauri/src/commands/: ai_behavior.rs  animation.rs  audio.rs  bank_management.rs  boxer.rs  comparison.rs  emulator.rs  expansion.rs  frame_reconstructor.rs  frame_tags.rs  help.rs  history.rs  layout_pack.rs  mod.rs  patches.rs  plugins.rs  project.rs  region.rs  relocation.rs  rom.rs  scripts.rs  settings.rs  text.rs  tools.rs
apps/desktop/src-tauri/src/utils/: mod.rs  validation.rs
crates/assembly-core/: Cargo.toml
crates/assembly-core/src/: lib.rs
crates/assembly-core/src/assembler/: mod.rs
crates/assembly-core/src/disassembler/: mod.rs
crates/assembly-core/src/patcher/: mod.rs
crates/asset-core/: Cargo.toml  build_errors.txt
crates/asset-core/src/: animation.rs  compression.rs  fighter.rs  frame.rs  frame_renderer.rs  frame_tags.rs  gfx.rs  lib.rs  palette.rs
crates/asset-core/src/audio/: constants.rs  format.rs  mod.rs  sample.rs  sequence.rs  spc700.rs  wav.rs
crates/asset-core/src/brr/: block.rs  constants.rs  decoder.rs  encoder.rs  mod.rs
crates/asset-core/src/spc/: builder.rs  constants.rs  id666.rs  mod.rs  version.rs
crates/asset-core/tests/: fighter_bin_edit_test.rs
crates/console-dev-core/: Cargo.toml
crates/console-dev-core/src/: lib.rs
crates/console-dev-core/src/dumper/: mod.rs
crates/console-dev-core/src/flashcart/: everdrive.rs  mod.rs  sd2snes.rs  usb2snes.rs
crates/console-dev-core/src/hardware_test/: audio_latency.rs  frame_timing.rs  input_lag.rs  mod.rs  power_consumption.rs
crates/debugger-core/: Cargo.toml
crates/debugger-core/src/: lib.rs  types.rs
crates/debugger-core/src/cpu/: disassembler.rs  mod.rs
crates/debugger-core/src/memory/: mod.rs
crates/debugger-core/src/spc700/: mod.rs
crates/debugger-core/src/tracer/: mod.rs
crates/emulator-core/: Cargo.toml
crates/emulator-core/src/: audio.rs  input.rs  lib.rs  libretro.rs  libretro_runtime.rs  snes9x.rs  state.rs  video.rs
crates/expansion-core/: Cargo.toml
crates/expansion-core/src/: ingame_editor.rs  lib.rs  roster_expansion.rs  types.rs
crates/plugin-core/: Cargo.toml
crates/plugin-core/src/: api.rs  lib.rs  lua_runtime.rs  manager.rs  types.rs
crates/profiler-core/: Cargo.toml
crates/profiler-core/src/: lib.rs
crates/profiler-core/src/audio/: mod.rs
crates/profiler-core/src/graphics/: mod.rs
crates/profiler-core/src/runtime/: mod.rs
crates/project-core/: Cargo.toml
crates/project-core/src/: bank_duplication.rs  lib.rs  tools.rs
crates/project-core/src/patch_notes/: adapter.rs  detailed_report.rs  mod.rs  renderer.rs  types.rs
crates/relocation-core/: Cargo.toml
crates/relocation-core/src/: bank_manager.rs  free_space.rs  lib.rs  manifest_update.rs  relocation.rs
crates/rom-core/: Cargo.toml
crates/rom-core/src/: comparison.rs  creator_session.rs  lib.rs  region.rs  text.rs
crates/rom-core/src/animation/: constants.rs  loader.rs  mod.rs  types.rs  writer.rs
crates/rom-core/src/roster/: constants.rs  layout.rs  loader.rs  mod.rs  types.rs  writer.rs
crates/script-core/: Cargo.toml
crates/script-core/src/: animation.rs  lib.rs
crates/script-core/src/ai_behavior/: constants.rs  manager.rs  mod.rs  parser.rs  presets.rs  simulation.rs  types.rs
tests/: Cargo.toml  test_rom.py
tests/integration/: palette_edit_test.rs  portrait_import_test.rs
tests/integration/common/: mod.rs  palette_utils.rs  portrait_utils.rs  sprite_utils.rs
tests/target2/debug/.fingerprint/adler2-1a456c7bf2f3b226/: lib-adler2
tests/target2/debug/.fingerprint/asset-core-8358994199cd2865/: dep-lib-asset_core  lib-asset_core.json
tests/target2/debug/.fingerprint/autocfg-2d085ea288b54cbb/: lib-autocfg
tests/target2/debug/.fingerprint/block-buffer-087b59aedc4f5931/: lib-block_buffer  lib-block_buffer.json
tests/target2/debug/.fingerprint/bytemuck-51d7112f0347f184/: lib-bytemuck
tests/target2/debug/.fingerprint/color_quant-38f20655dfdb7753/: lib-color_quant.json
tests/target2/debug/.fingerprint/cpufeatures-995317b5289dd323/: lib-cpufeatures  lib-cpufeatures.json
tests/target2/debug/.fingerprint/crc32fast-288644178f4476c6/: build-script-build-script-build  build-script-build-script-build.json
tests/target2/debug/.fingerprint/crc32fast-3a66b7c5758ccca8/: run-build-script-build-script-build
tests/target2/debug/.fingerprint/crc32fast-71a45df3ee6cf5c6/: lib-crc32fast.json
tests/target2/debug/.fingerprint/crossbeam-epoch-4930b4541c48175a/: lib-crossbeam_epoch
tests/target3/: .rustc_info.json
(+610 files in other folders)
