[workspace]
members = [
    "crates/asset-core",
    "crates/emulator-core",
    "crates/manifest-core",
    "crates/patch-core",
    "crates/plugin-core",
    "crates/project-core",
    "crates/relocation-core",
    "crates/rom-core",
    "crates/script-core",
    "apps/desktop/src-tauri",
    "tests", "crates/debugger-core", "crates/expansion-core", "crates/testing-core",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Super Punch-Out!! Editor Team"]
license = "MIT"
repository = "https://github.com/yourusername/super-punch-out-editor"
homepage = "https://github.com/yourusername/super-punch-out-editor"
description = "A comprehensive editor for Super Punch-Out!! (SNES)"
keywords = ["snes", "editor", "rom-hacking", "super-punch-out"]
categories = ["game-development", "development-tools"]
rust-version = "1.70"

[workspace.dependencies]
# Core dependencies used across multiple crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
sha1 = "0.10"
log = "0.4"

# Async & concurrency
tokio = { version = "1.35", features = ["full"] }
crossbeam-channel = "0.5"

# File & path handling
dirs = "5.0"
tempfile = "3.8"

# Encoding/compression
base64 = "0.22"
flate2 = "1.0"
crc32fast = "1.3"
bincode = "1.3"

# Image processing
image = "0.25"

# Utility
once_cell = "1.19"
libc = "0.2"
spin_sleep = "1.2"
parking_lot = "0.12"

# Tauri (for tauri-app only)
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2.10"
tauri-build = { version = "2", features = [] }

# Additional dependencies
cpal = "0.15"
libloading = "0.8"
serde_bytes = "0.11"
md5 = "0.7"
semver = "1.0"

# Testing
pretty_assertions = "1.4"

# Internal crate dependencies
rom-core = { path = "crates/rom-core" }
manifest-core = { path = "crates/manifest-core" }
asset-core = { path = "crates/asset-core" }
emulator-core = { path = "crates/emulator-core" }
project-core = { path = "crates/project-core" }
patch-core = { path = "crates/patch-core" }
script-core = { path = "crates/script-core" }
relocation-core = { path = "crates/relocation-core" }
plugin-core = { path = "crates/plugin-core" }
