[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "superpunchouteditor"
version = "0.1.0"
description = "A framework for editing the Super Punch‑Out!! ROM"
readme = "README.md"
authors = [ { name = "DocDamage" } ]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=12.0",
]

[project.scripts]
supo = "superpunchouteditor.editor:cli"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"