[package]
name = "asset-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Asset processing for Super Punch-Out!! Editor"
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
chrono = { workspace = true }
rom-core = { workspace = true }
manifest-core = { workspace = true }
