[package]
name = "console-dev-core"
version = "2.0.0"
edition = "2021"
description = "Hardware development tools for deep system layer integration"
license = "MIT OR Apache-2.0"

[dependencies]
rom-core = { path = "../rom-core" }
emulator-core = { path = "../emulator-core" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
parking_lot = "0.12"
log = "0.4"

[features]
default = []
usb-support = []
