[package]
name = "emulator-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Snes9x libretro core integration for Super Punch-Out!! editor"
repository.workspace = true

[dependencies]
libloading = { workspace = true }
spin_sleep = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }
bincode = { workspace = true }
flate2 = { workspace = true }
crc32fast = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }

cpal = { workspace = true, optional = true }

[features]
default = ["audio"]
audio = ["cpal"]

[lib]
name = "emulator_core"
crate-type = ["lib", "cdylib"]
