[package]
name = "expansion-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
rom-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
debugger-core = { workspace = true }
