[package]
name = "plugin-core"
version = "2.0.0"
edition = "2021"
authors = ["Super Punch-Out!! Editor Team"]
description = "Plugin system for Super Punch-Out!! Editor"
license = "MIT"

[dependencies]
rom-core = { path = "../rom-core" }
manifest-core = { path = "../manifest-core" }
asset-core = { path = "../asset-core" }

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
log = "0.4"

# Lua scripting support (vendored builds Lua from source)
mlua = { version = "0.9", features = ["lua54", "serialize", "send", "vendored"], optional = true }

# WASM plugin support (future)
wasmtime = { version = "15.0", optional = true }

[features]
default = ["lua-scripting"]
lua-scripting = ["mlua"]
wasm-plugins = ["wasmtime"]
