[package]
name = "project-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Project management for Super Punch-Out!! Editor"
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
