[package]
name = "tauri-appsuper-punch-out-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tauri desktop application for Super Punch-Out!! Editor"
repository.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appsuper_punch_out_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-updater = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rom-core = { workspace = true }
manifest-core = { workspace = true }
project-core = { workspace = true }
patch-core = { workspace = true }
asset-core = { workspace = true }
emulator-core = { workspace = true }
script-core = { workspace = true }
relocation-core = { workspace = true }
plugin-core = { workspace = true, features = ["lua-scripting"] }
thiserror = { workspace = true }
sha1 = { workspace = true }
image = { workspace = true }
chrono = { workspace = true }
md5 = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
semver = { workspace = true }
once_cell = { workspace = true }
crossbeam-channel = { workspace = true }
spin_sleep = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }

# Optional audio output support
cpal = { workspace = true, optional = true }

[features]
default = []
audio-output = ["cpal"]

# Bundle snes9x libretro core with the app
[package.metadata.tauri.bundle]
resources = [
  "binaries/snes9x_libretro.dll",
  "binaries/snes9x_libretro.dylib",
  "binaries/snes9x_libretro.so",
]
